# OTE

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Doxyfile  Makefile  OTE.kdev4  OTE.kdevelop.filelist  OTE.kdevelop.pcs  README~  cmake_install.cmake  ote.kdevelop  ote.kdevelop.filelist  ote.kdevses  resources.cfg
.kdev4/: OTE.kdev4
Media/Caelum/: CaelumSample.cg  CaelumSample.material
Media/MyGUI_Media/: core.xml
Media/custom/: cube  simple.terrain  terrain
Media/materials/scripts/.svn/: entries
Media/materials/textures/.svn/: entries
Media/models/: playground.mesh
inc/: FeedDataTypes.h  FeedDataTypes.h~  destroyer.h  graphics.h  objectregistry.h  physics.h  resourcemanager.h  settingsmanager.h  singleton.h  timer.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  game.cpp  game.h  input.cpp  input.h  main.cpp  main.cpp~  objectregistry.cpp  objectregistry.cpp~  resourcemanager.cpp  serialize.cpp  serializer  settingsmanager.cpp
src/graphics/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  graphics.cpp  graphics.cpp~  listener.cpp  listener.h
src/physics/: CMakeLists.txt  CMakeLists.txt~  Makefile  OgreNewt_Body.cpp  OgreNewt_Body.h  OgreNewt_Body.h~  OgreNewt_Collision.cpp  OgreNewt_CollisionPrimitives.cpp  OgreNewt_CollisionPrimitives.h  OgreNewt_Debugger.cpp  OgreNewt_Joint.cpp  OgreNewt_RayCast.cpp  OgreNewt_World.cpp  cmake_install.cmake  physics.cpp  physics.cpp~
