cmake_minimum_required(VERSION 2.6)

PROJECT(ote)

#if you don't want the full compiler output, remove the following line
SET(DEBUG_BUILD ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(LIB_INCLUDE_DIR /usr/local/include)

ADD_DEFINITIONS(-Wall -std=c++0x)
#add definitions, compiler switches, etc.
IF(DEBUG_BUILD)
	ADD_DEFINITIONS(-O0 -g3 -pg)
ELSE()
	ADD_DEFINITIONS(-O3 -g0)
ENDIF()

# ADD_DEFINITIONS(-DSINGLE_THREADED)

INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${OTE_SOURCE_DIR}/inc ${LIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${LIB_INCLUDE_DIR}/OGRE ${LIB_INCLUDE_DIR}/MYGUI ${LIB_INCLUDE_DIR}/Caelum)
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${LIB_INCLUDE_DIR}/OgreNewt ${LIB_INCLUDE_DIR}/newton)

LINK_DIRECTORIES(/home/mononofu/Programmieren/lib /usr/local/lib)

ADD_SUBDIRECTORY(src)


